# GameScrcpy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  main.cpp
src/codec/: CMakeLists.txt  Frame.cpp  Frame.h  Helper.cpp  Helper.h  Packet.cpp  Packet.h  VideoDecoder.cpp  VideoDecoder.h
src/device/: AdbHelper.cpp  AdbHelper.h  CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.h
src/model/: CMakeLists.txt  DeviceModel.cpp  DeviceModel.h
src/network/: CMakeLists.txt  Network.cpp  Network.h
src/view/: CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  ControlDock.cpp  ControlDock.h  DeviceWidget.cpp  DeviceWidget.h  DeviceWindow.cpp  DeviceWindow.h  EmptySrb.cpp  EmptySrb.h  QMLAdapter.cpp  QMLAdapter.h  Uniforms.cpp  Uniforms.h  VaapiTexturesSrb.cpp  VaapiTexturesSrb.h  VideoRenderer.cpp  VideoRenderer.h  YuvTexturesSrb.cpp  YuvTexturesSrb.h
src/view/qml/: Main.qml
